k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  type: ClusterIP
  selector:
    app: websocket-server
  ports:
    - port: 80
      targetPort: 8080
